--- a/courses.html
+++ b/courses.html
@@ -12,8 +12,11 @@
         <nav>
             <ul>
                 <li><a href="Personal-Website.html">Home</a></li>
+                <li><a href="courses.html" class="active">Courses</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="tutorials.html">Video Tutorials</a></li>
+                <li><a href="sign-up.html">Sign Up</a></li>
+                <li><a href="sign-in.html">Sign In</a></li>
             </ul>
         </nav>
     </header>
@@ -24,10 +27,14 @@
             <!-- Dynamic content will be loaded here -->
             <!-- Content specific to the Courses section -->
         </section>
+
+      
+    </main>
     </main>
 
     <footer>
         <p>Copyright © 2024 Matt Jerry</p>
+        <p>Privacy Policy</p>
     </footer>
 
     <script src="scripts.js"></script>
