--- a/about.html
+++ b/about.html
@@ -13,7 +13,10 @@
             <ul>
                 <li><a href="Personal-Website.html">Home</a></li>
                 <li><a href="courses.html">Courses</a></li>
+                <li><a href="about.html" class="active">About Me</a></li>
                 <li><a href="tutorials.html">Video Tutorials</a></li>
+                <li><a href="sign-up.html">Sign Up</a></li>
+                <li><a href="sign-in.html">Sign In</a></li>
             </ul>
         </nav>
     </header>
@@ -28,6 +31,7 @@
 
     <footer>
         <p>Copyright © 2024 Matt Jerry</p>
+        <p>Privacy Policy</p>
     </footer>
 
     <script src="scripts.js"></script>
