--- a/tutorials.html
+++ b/tutorials.html
@@ -14,6 +14,9 @@
                 <li><a href="Personal-Website.html">Home</a></li>
                 <li><a href="courses.html">Courses</a></li>
                 <li><a href="about.html">About Me</a></li>
+                <li><a href="tutorials.html" class="active">Video Tutorials</a></li>
+                <li><a href="sign-up.html">Sign Up</a></li>
+                <li><a href="sign-in.html">Sign In</a></li>
             </ul>
         </nav>
     </header>
@@ -28,6 +31,7 @@
 
     <footer>
         <p>Copyright © 2024 Matt Jerry</p>
+        <p>Privacy Policy</p>
     </footer>
 
     <script src="scripts.js"></script>
