Instantiated more content and corresponding functionality

--- a/Personal-Website.html
+++ b/Personal-Website.html
@@ -88,6 +88,6 @@
         <p>Privacy Policy</p>
     </footer>
 
-    <script src="scripts.js"></script>
+    <script src="Javascript.js"></script>
 </body>
 </html>
