--- a/about.html
+++ b/about.html
@@ -20,20 +20,91 @@
             </ul>
         </nav>
     </header>
-
+    
     <main>
-        <section id="about-content">
-            <h2>About Me</h2>
-            <p>Here you will provide detailed information about yourself, your experience, and your expertise in Mathematics and Computer Science.</p>
-            <!-- Content specific to the About Me section -->
+        <!-- Academic Background Section -->
+        <section id="academic-background">
+            <h2>Academic Background</h2>
+            <p>
+                At the core of my scholarly pursuits lies a profound dedication to the disciplines of Computer Science and Mathematics—a dual major that has equipped me with a robust analytical framework and a versatile skill set. My journey through academia has been marked by an insatiable curiosity, leading me to immerse myself in a spectrum of sciences, each unfolding new dimensions of understanding.
+            </p>
+            <p>
+                In Computer Science, I delved into the algorithmic languages of the digital world, mastering the art of programming, systems analysis, and computational theory. This expertise enables me to navigate the complexities of technology with precision and innovation. Meanwhile, Mathematics, the universal language of logic, provided me with the tools to decipher patterns and solve intricate problems, from abstract algebra to complex calculus.
+            </p>
+            <p>
+                Beyond the foundational domains of mathematics and computer science, my academic voyage has embraced the extensive landscapes of the natural sciences. Chemistry unraveled the mysteries of the molecular canvas, where each reaction paints the dynamic picture of life’s processes. Physics introduced me to the symphony of the universe, from the subatomic to the celestial, a realm where matter and energy dance in cosmic interplay.
+            </p>
+            <p>
+                Biochemistry stood at the crossroads of the physical and biological sciences, a testament to nature's complexity, from DNA's intricate spiral to the elegance of metabolic pathways. Through Anatomy and Physiology, I embarked on an intimate exploration of the human body, a journey through the marvels of biological architecture and the intricate systems that sustain human life.
+            </p>
+            <p>
+                My scholarly pursuits also encompassed the empirical world of Statistics, where data narrates stories of patterns and probabilities. This discipline was pivotal in teaching me the language of data analysis, providing the critical lens through which to interpret research findings and derive meaningful insights. Equipped with statistical acumen, I ventured into the study of Economics, which revealed the tapestry of market dynamics and the undercurrents of financial decisions, adding a new dimension to my understanding of global interdependencies.
+            </p>
+            <p>
+                The culmination of these varied academic endeavors has not only sculpted my expertise in computational and mathematical theories but has also empowered me with a versatile and analytical approach to problem-solving. This interdisciplinary education has been instrumental in shaping a holistic worldview, allowing me to tackle complex problems with nuanced perspectives and innovative solutions.
+            </p>
+            <p>
+                This eclectic educational experience has not only honed my expertise in Computer Science and Mathematics but has also enriched my perspective, enabling me to approach challenges with a comprehensive and interdisciplinary lens.
+            </p>
         </section>
-    </main>
+
+        <!-- Professional Experience Section -->
+        <section id="professional-experience">
+            <h2>Professional Experience</h2>
+            <p>
+                My professional journey weaves through the vast terrain of the tech industry, having embraced roles that demanded both precision and creativity. In the meticulous world of Data Entry, I fortified the backbone of data integrity, ensuring the accuracy that serves as the foundation for informed decision-making.
+            </p>
+            <p>
+                As an Analyst, I transcended mere data capture; I interpreted and transformed raw data into actionable insights. My analyses did not just narrate the existing tales but predicted new sagas through predictive models and trend analyses, influencing strategies and driving business growth.
+            </p>
+            <p>
+                The ever-evolving realm of Web and Application Development beckoned next, where I honed my craft in both Front-end and Back-end technologies. Crafting intuitive user interfaces, I focused on user experience, ensuring seamless interactions that captivate and engage. My front-end designs were not only aesthetically pleasing but also accessible, adhering to the best practices of inclusive and user-centered design.
+            </p>
+            <p>
+                Delving deeper into the technical stack, my Back-end development responsibilities had me architecting robust server-side logic. Here, I engineered the core functionalities that users may never see but always experience through the fluidity and stability of the applications. My work involved database management, server scripting, and API integration, crafting the silent yet powerful engines that drive modern applications.
+            </p>
+            <p>
+                Throughout these roles, I've wielded an array of programming languages and technologies, each like a finely tuned instrument in an orchestra, played with both technical virtuosity and creative intuition. This symphony of skills has been instrumental in developing scalable, efficient, and innovative software solutions, marking my contribution to the digital landscape.
+            </p>
+            <p>
+                My professional story is one of continuous evolution, a testament to my belief in lifelong learning and adaptation. Each role has been a building block, each challenge a lesson, and each success a stepping stone to greater achievements.
+            </p>
+        </section>
+
+        <!-- Personal Interests Section -->
+        <section id="personal-interests">
+            <h2>Personal Interests</h2>
+            <p>
+                While my professional and academic endeavors keep me intellectually stimulated, my personal interests are where I seek balance, adventure, and the joy of discovery. As a fitness enthusiast, I find solace and strength in lifting weights, where the rhythm of each rep and the progression of sets mirrors the discipline I apply in my scholarly pursuits.
+            </p>
+            <p>
+                The great outdoors call to me as well. Hiking through nature's myriad paths offers not just exercise for the body, but also respite for the mind, grounding me with every step on the earth's vast canvas. It's in the quiet whispers of the winds and the rustle of leaves that I find moments of profound clarity and creativity.
+            </p>
+            <p>
+                The kitchen is my laboratory away from the lab, where cooking becomes a delicate dance of flavors and ingredients. It's a culinary experimentation ground where I apply the principles of chemistry to the art of creating nourishment, both a science and a form of expression for me.
+            </p>
+            <p>
+                In quieter times, I indulge in the world of coding, not as a task but as a hobby. This recreational programming is where I allow my creativity free rein, exploring new technologies and building projects that may not serve a client or a deadline, but fuel my passion for the craft.
+            </p>
+            <p>
+                Spontaneity drives me to seek new experiences, whether it's a sudden road trip to uncharted destinations or an impromptu DIY project. The thrill of the unknown is a siren song, leading me to novel adventures that break the routine, invigorate the spirit, and inspire new perspectives.
+            </p>
+            <p>
+                My interest in mechanics and technology extends beyond the digital. Tinkering with machines and understanding the intricacies of their operation satisfies a fundamental curiosity about how things work, tying back to my love for problem-solving and innovation.
+            </p>
+            <p>
+                Traveling for me is more than a pastime; it's a pursuit of cultural wisdom and global understanding. Each journey is a narrative of people, history, and places that enrich my worldview, allowing me to weave the tapestry of diverse human experiences into my personal and professional life.
+            </p>
+            <p>
+                These interests, while distinct from my professional life, are threads in the same fabric, each contributing to the person I am. They reflect a life lived not just within the confines of vocation or study but one that embraces the expanse of what it means to be truly engaged with the world.
+            </p>
+        </section>
 
     <footer>
         <p>Copyright © 2024 Matt Jerry</p>
         <p>Privacy Policy</p>
     </footer>
 
-    <script src="scripts.js"></script>
+    <script src="Javascript.js"></script>
 </body>
 </html>
