--- a/courses.html
+++ b/courses.html
@@ -37,6 +37,6 @@
         <p>Privacy Policy</p>
     </footer>
 
-    <script src="scripts.js"></script>
+    <script src="Javascript.js"></script>
 </body>
 </html>
