--- a/sign-in.html
+++ b/sign-in.html
@@ -11,7 +11,7 @@
         <h1>Sign In</h1>
         <nav>
             <ul class="nav-list">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="Personal-Website.html">Home</a></li>
                 <li><a href="courses.html">Courses</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="tutorials.html">Video Tutorials</a></li>
@@ -48,6 +48,6 @@
         <p>Privacy Policy</p>
     </footer>
 
-    <script src="scripts.js"></script>
+    <script src="Javascript.js"></script>
 </body>
 </html>
