--- a/sign-up.html
+++ b/sign-up.html
@@ -58,6 +58,6 @@
         <p>Privacy Policy</p>
     </footer>
 
-    <script src="scripts.js"></script>
+    <script src="Javascript.js"></script>
 </body>
 </html>
